<resources>
    <string name="app_name">Music Player</string>
    <string name="songs">Songs</string>
    <string name="song">Song</string>
    <string name="albums">Albums</string>
    <string name="album">Album</string>
    <string name="artists">Artists</string>
    <string name="artist">Artist</string>
    <string name="playlists">Playlists</string>
    <string name="search">Search Button</string>
    <string name="song_image">Song Image</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="next">next</string>
    <string name="favourite">favourite</string>
    <string name="share">share</string>
    <string name="dash">-</string>
    <string name="heart">heart</string>
    <string name="settings">settings</string>
</resources>