<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/song"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_name"
        android:hint="@string/artist"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_name"
        android:layout_toEndOf="@id/artist_name"
        android:ellipsize="end"
        android:hint="@string/album"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/settings"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_dots" />

</RelativeLayout>